--- a/css/styles.css
+++ b/css/styles.css
@@ -176,9 +176,10 @@ h1,h2{
 
 #conjunto{
     float: left;
-    width: 45%;
+    width: 100%;
     background-color:#F7F7FD ;
     border-radius: 5px;
+    height: 50px;
 }
 
 
@@ -374,7 +375,7 @@ footer img{
     width: 40%;
     background-color: #E95D5D;
     position: absolute !important;
-    height:1736px;
+    height:2221px;
     top: 0;
     left: 60%;
 }
@@ -441,16 +442,19 @@ footer img{
 }
 
 
-#escrituras{
-    float: left;
-    width: 40%;
+
+
+#texto1 p{
+    font-size: 25px;
+    width: 80%;
+    text-align: justify;
+  
 }
 
-#escrituras p{
-    font-size: 27px;
-   
-    margin-top: 10%;
-    margin-bottom: 10%;
+#texto2 p{
+    text-align: justify ;
+    font-size: 50px;
+    width: 100%;
 }
 
 
@@ -462,6 +466,73 @@ footer img{
     margin-bottom: 10%;
 }
 
+.inpusitaso{
+    float: left;
+    width: 23%;
+    padding-left: 4%;
+    padding-top: 2%;
+   
+}
+
+
+
+#ContenedorDelNOSOTROSxd{
+  display: inline-block;
+  position: relative;
+  width: 100%;
+}
+
+#ContenedorDelNOSOTROSxd img{
+    border-radius: 25px;
+    display: block;
+    margin: 0px auto;
+    width: 80%;
+    height: 100%;
+    margin-bottom: 10%;
+    
+}
+
+
+#texto1{
+    position: absolute;
+   
+    left: 15%;
+    top: 15%;
+
+
+
+
+}
+
+.inpusitaso a{
+    color:#E95D5D;
+    text-decoration: none;
+    border: #F7F7FD;
+    font-size: 100%;
+    
+    font-weight: bold;
+}
+
+
+.inpusitaso a:hover{
+    color:#67C5C8;
+}
+
+
+
+#texto2{
+    position: absolute;
+    left: 15%;
+    top: 3%;
+
+}
+
+
+
+#ashe15{
+    text-align: left;
+   
+}
 
 
 
